# Kalendertool

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Entwicklerdoku.md  README.md  build_exe.sh  calendar_gui.py  fortschritt.txt  logging_config.py  plan.md  proof.txt  pyproject.toml  release_pypi.sh  requirements.txt  roadmap.txt  run_tests.sh  start_cli.py  start_gui.py  storage.py  sync_caldav.py  todo.md  todo.txt  utils.py  videobatch_extra.py  videobatch_gui.py  videobatch_launcher.py
.github/workflows/: tests.yml
api/: __init__.py  converter.py
config/: __init__.py  paths.py  standards.py
docs/: basics.rst  cli.rst  conf.py  groups.rst  index.rst  release.rst  start.rst
docs/api/: api.rst
docs/roadmap/: proof.txt  roadmap.txt  todo.txt
help/: __init__.py  tooltips.py
scripts/: build_appimage.sh  cleanup_logs.py  generate_docs.sh
tests/: test_cli.py  test_converter.py  test_extra.py  test_gui.py  test_storage.py
